# Package ######################################################################

[build-system]
requires = [
    # 70.1.0: min version for integrated bdist_wheel command from wheel package
    # 77.0.0: min version for SPDX expression support for project.license
    "setuptools>=70.1.0",
    "cmake>=3.27",
    "ninja",
    "numpy",
    "packaging",
    "pyyaml",
    "requests",
    "six",  # dependency chain: NNPACK -> PeachPy -> six
    "typing-extensions>=4.10.0",
]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    # This list should be kept in sync with the requirements-build.txt
    # in PyTorch root until the project fully migrates to pyproject.toml
    # after which this can be removed as it is already specified in the
    # [build-system] section
    "setuptools>=70.1.0,<80.0",  # setuptools develop deprecated on 80.0
    "cmake>=3.27",
    "ninja",
    "numpy",
    "packaging",
    "pyyaml",
    "requests",
    "six",  # dependency chain: NNPACK -> PeachPy -> six
    "typing-extensions>=4.10.0",

    # This list should be kept in sync with the requirements.txt in
    # PyTorch root until the project fully migrates to pyproject.toml
    "build[uv]",
    "expecttest>=0.3.0",
    "filelock",
    "fsspec>=0.8.5",
    "hypothesis",
    "jinja2",
    "lintrunner; platform_machine != 's390x' and platform_machine != 'riscv64'",
    "networkx>=2.5.1",
    "optree>=0.13.0",
    "psutil",
    "sympy>=1.13.3",
    "typing-extensions>=4.15.0",
    "wheel",
]

[project]
name = "torch"
description = "Tensors and Dynamic neural networks in Python with strong GPU acceleration"
readme = "README.md"
requires-python = ">=3.10"
# TODO: change to `license = "BSD-3-Clause"` and enable PEP 639 after pinning setuptools>=77
# FIXME: As of 2025.06.20, it is hard to ensure the minimum version of setuptools in our CI environment.
# TOML-table-based license deprecated in setuptools>=77, and the deprecation warning will be changed
# to an error on 2026.02.18. See also: https://github.com/pypa/setuptools/issues/4903
license = { text = "BSD-3-Clause" }
authors = [{ name = "PyTorch Team", email = "packages@pytorch.org" }]
keywords = ["pytorch", "machine learning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = [
    "entry-points",
    "dependencies",
    "scripts",
    "version",
]

[project.urls]
Homepage = "https://pytorch.org"
Repository = "https://github.com/pytorch/pytorch"
Documentation = "https://pytorch.org/docs"
"Issue Tracker" = "https://github.com/pytorch/pytorch/issues"
Forum = "https://discuss.pytorch.org"

[project.optional-dependencies]
optree = ["optree>=0.13.0"]
opt-einsum = ["opt-einsum>=3.3"]
pyyaml = ["pyyaml"]

# Linter tools #################################################################

[tool.isort]
src_paths = ["caffe2", "torch", "torchgen", "functorch", "test"]
extra_standard_library = ["typing_extensions"]
skip_gitignore = true
skip_glob = ["third_party/*"]
atomic = true
profile = "black"
indent = 4
line_length = 88
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true

[tool.usort]
preserve_inline_comments = true
collapse_blank_lines_in_category = false

[tool.usort.known]
first_party = ["caffe2", "torch", "torchgen", "functorch", "test"]
standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 88
src = ["caffe2", "torch", "torchgen", "functorch", "test"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.ruff.lint]
# NOTE: Synchoronize the ignores with .flake8
external = [
    "B001",
    "B902",
    "B950",
    "E121",
    "E122",
    "E128",
    "E131",
    "E704",
    "E723",
    "F723",
    "F812",
    "P201",
    "P204",
    "T484",
    "TOR901",
]
ignore = [
    # these ignores are from flake8-bugbear; please fix!
    "B007", "B008", "B017",
    "B018", # Useless expression
    "B023",
    "B028", # No explicit `stacklevel` keyword argument found
    "E402",
    "C408", # C408 ignored because we like the dict keyword argument syntax
    "E501", # E501 is not flexible enough, we're using B950 instead
    "E741",
    "EXE001",
    "F405",
    "FURB122", # writelines
    # these ignores are from ruff NPY; please fix!
    "NPY002",
    # these ignores are from ruff PERF; please fix!
    "PERF203",
    "PERF401",
    # these ignores are from PYI; please fix!
    "PYI024",
    "PYI036",
    "PYI041",
    "PYI056",
    "SIM102", "SIM103", "SIM112", # flake8-simplify code styles
    "SIM105", # these ignores are from flake8-simplify. please fix or ignore with commented reason
    "SIM108", # SIM108 ignored because we prefer if-else-block instead of ternary expression
    "SIM110", # Checks for for loops that can be replaced with a builtin function, like any or all.
    "SIM114", # Combine `if` branches using logical `or` operator
    "SIM116", # Disable Use a dictionary instead of consecutive `if` statements
    "SIM117",
    "SIM300", # Yoda condition detected
    "UP007", # keep-runtime-typing
    "UP045", # keep-runtime-typing
    "TC006",
    # TODO: Remove Python-3.10 specific suppressions
    "B905",
]
select = [
    "B",
    "B904", # Re-raised error without specifying the cause via the from keyword
    "C4",
    "G",
    "E",
    "EXE",
    "F",
    "SIM",
    "W",
    # Not included in flake8
    "FURB",
    "LOG",
    "NPY",
    "PERF",
    "PGH004",
    "PIE",
    "PLC0131", # type bivariance
    "PLC0132", # type param mismatch
    "PLC1802", # len({expression}) used as condition without comparison
    "PLC0205", # string as __slots__
    "PLC3002", # unnecessary-direct-lambda-call
    "PLC0414", # Import alias does not rename original package
    "PLE",
    "PLR0133", # constant comparison
    "PLR0206", # property with params
    "PLR1722", # use sys exit
    "PLR1736", # unnecessary list index
    "PLW0127", # Self-assignment of variable
    "PLW0129", # assert on string literal
    "PLW0131", # named expr without context
    "PLW0133", # useless exception statement
    "PLW0245", # super without brackets
    "PLW0406", # import self
    "PLW0711", # binary op exception
    "PLW1501", # bad open mode
    "PLW1507", # shallow copy os.environ
    "PLW1509", # preexec_fn not safe with threads
    "PLW2101", # useless lock statement
    "PLW3301", # nested min max
    "PT006", # TODO: enable more PT rules
    "PT014", # duplicate parameterize case
    "PT022",
    "PT023",
    "PT024",
    "PT025",
    "PT026",
    "PYI",
    "Q003",  # avoidable escaped quote
    "Q004",  # unnecessary escaped quote
    "RSE",
    "RUF007", # pairwise over zip
    "RUF008", # mutable dataclass default
    "RUF013", # ban implicit optional
    "RUF015", # access first ele in constant time
    "RUF016", # type error non-integer index
    "RUF017",
    "RUF018", # no assignment in assert
    "RUF019", # unnecessary-key-check
    "RUF020", # never union
    "RUF024", # from keys mutable
    "RUF026", # default factory kwarg
    "RUF030", # No print statement in assert
    "RUF033", # default values __post_init__ dataclass
    "RUF041", # simplify nested Literal
    "RUF048", # properly parse `__version__`
    "RUF200", # validate pyproject.toml
    "S324", # for hashlib FIPS compliance
    "SLOT",
    "TC",
    "TRY002", # ban vanilla raise (todo fix NOQAs)
    "TRY203",
    "TRY401", # verbose-log-message
    "UP",
    "YTT",
    "S101",
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
]
"*.pyi" = [
    "PYI011", # typed-argument-default-in-stub
    "PYI021", # docstring-in-stub
    "PYI053", # string-or-bytes-too-long
]
"functorch/docs/source/tutorials/**" = [
    "F401",
]
"test/export/**" = [
    "PGH004",
    "S101",
]
"test/typing/**" = [
    "PGH004"
]
"test/typing/reveal/**" = [
    "F821",
]
"test/torch_np/numpy_tests/**" = [
    "F821",
    "NPY201",
]
"test/dynamo/test_bytecode_utils.py" = [
    "F821",
]
"test/dynamo/test_debug_utils.py" = [
    "UP037",
]
"test/dynamo/test_misc.py" = [
    "PGH004",
]
"test/jit/**" = [
    "PLR0133", # tests require this for JIT
    "PYI",
    "RUF015",
    "S101",
    "UP", # We don't want to modify the jit test as they test specify syntax
]
"test/test_jit.py" = [
    "PLR0133", # tests require this for JIT
    "PYI",
    "RUF015",
    "S101",
    "UP", # We don't want to modify the jit test as they test specify syntax
]
"test/inductor/s429861_repro.py" = [
    "PGH004",
]
"test/inductor/test_torchinductor.py" = [
    "UP037",
]
# autogenerated #TODO figure out why file level noqa is ignored
"torch/_appdirs.py" = ["PGH004"]
"torch/jit/_shape_functions.py" = ["PGH004"]
"torch/_inductor/fx_passes/serialized_patterns/**" = ["F401", "F501"]
"torch/_inductor/autoheuristic/artifacts/**" = ["F401", "F501"]
"torch/_inductor/codegen/**" = [
    "PGH004"
]
"torchgen/api/types/__init__.py" = [
    "F401",
    "F403",
]
"torch/utils/collect_env.py" = [
    "UP", # collect_env.py needs to work with older versions of Python
]
"torch/_vendor/**" = [
    "UP", # No need to mess with _vendor
]
"tools/linter/**" = [
    "LOG015" # please fix
]
# S101 migration: Remaining test folders/files still needing migration (ignore S101 for now)
# Note: test/export/**, test/jit/**, test/torch_np/numpy_tests/** have S101 added to existing entries above
"test/_test_bazel.py" = ["S101"]
"test/distributed/**" = ["S101"]
"test/dynamo/**" = ["S101"]
"test/functorch/**" = ["S101"]
"test/fx/**" = ["S101"]
"test/higher_order_ops/**" = ["S101"]
"test/inductor/**" = ["S101"]
"test/onnx/**" = ["S101"]
"test/quantization/**" = ["S101"]
"test/xpu/**" = ["S101"]
"test/run_test.py" = ["S101"]
# S101 migration: top-level test files still needing migration
"test/test_as_strided.py" = ["S101"]
"test/test_autocast.py" = ["S101"]
"test/test_autograd.py" = ["S101"]
"test/test_autograd_fallback.py" = ["S101"]
"test/test_binary_ufuncs.py" = ["S101"]
"test/test_bundled_images.py" = ["S101"]
"test/test_bundled_inputs.py" = ["S101"]
"test/test_cpp_api_parity.py" = ["S101"]
"test/test_cpp_extensions_aot.py" = ["S101"]
"test/test_cpp_extensions_jit.py" = ["S101"]
"test/test_cuda.py" = ["S101"]
"test/test_cuda_multigpu.py" = ["S101"]
"test/test_cuda_nvml_based_avail.py" = ["S101"]
"test/test_custom_ops.py" = ["S101"]
"test/test_datapipe.py" = ["S101"]
"test/test_decomp.py" = ["S101"]
"test/test_dlpack.py" = ["S101"]
"test/test_dynamic_shapes.py" = ["S101"]
"test/test_expanded_weights.py" = ["S101"]
"test/test_fake_tensor.py" = ["S101"]
"test/test_foreach.py" = ["S101"]
"test/test_functionalization_of_rng_ops.py" = ["S101"]
"test/test_fx.py" = ["S101"]
"test/test_fx_experimental.py" = ["S101"]
"test/test_fx_passes.py" = ["S101"]
"test/test_indexing.py" = ["S101"]
"test/test_jit_fuser.py" = ["S101"]
"test/test_jit_fuser_te.py" = ["S101"]
"test/test_jit_llga_fuser.py" = ["S101"]
"test/test_legacy_vmap.py" = ["S101"]
"test/test_linalg.py" = ["S101"]
"test/test_masked.py" = ["S101"]
"test/test_maskedtensor.py" = ["S101"]
"test/test_matmul_cuda.py" = ["S101"]
"test/test_meta.py" = ["S101"]
"test/test_mps.py" = ["S101"]
"test/test_namedtensor.py" = ["S101"]
"test/test_nestedtensor.py" = ["S101"]
"test/test_nn.py" = ["S101"]
"test/test_opaque_obj_v2.py" = ["S101"]
"test/test_ops.py" = ["S101"]
"test/test_ops_jit.py" = ["S101"]
"test/test_optim.py" = ["S101"]
"test/test_overrides.py" = ["S101"]
"test/test_proxy_tensor.py" = ["S101"]
"test/test_python_dispatch.py" = ["S101"]
"test/test_reductions.py" = ["S101"]
"test/test_scaled_matmul_cuda.py" = ["S101"]
"test/test_scatter_gather_ops.py" = ["S101"]
"test/test_serialization.py" = ["S101"]
"test/test_sparse.py" = ["S101"]
"test/test_sparse_csr.py" = ["S101"]
"test/test_sparse_semi_structured.py" = ["S101"]
"test/test_stateless.py" = ["S101"]
"test/test_static_runtime.py" = ["S101"]
"test/test_sympy_utils.py" = ["S101"]
"test/test_tensor_creation_ops.py" = ["S101"]
"test/test_tensorboard.py" = ["S101"]
"test/test_tensorexpr.py" = ["S101"]
"test/test_tensorexpr_pybind.py" = ["S101"]
"test/test_testing.py" = ["S101"]
"test/test_torch.py" = ["S101"]
"test/test_transformers.py" = ["S101"]
"test/test_typing.py" = ["S101"]
"test/test_unary_ufuncs.py" = ["S101"]
"test/test_varlen_attention.py" = ["S101"]
"test/test_view_ops.py" = ["S101"]
# torch/ folders still needing S101 migration
"torch/_dynamo/**" = ["S101"]
"torch/_inductor/**" = ["S101"]
"torch/distributed/**" = ["S101"]

[tool.codespell]
ignore-words = "tools/linter/dictionary.txt"

[tool.spin]
package = 'torch'

[tool.spin.commands]
"Build" = [
  ".spin/cmds.py:lint",
  ".spin/cmds.py:fixlint",
  ".spin/cmds.py:quicklint",
  ".spin/cmds.py:quickfix",
]
"Regenerate" = [
  ".spin/cmds.py:regenerate_version",
  ".spin/cmds.py:regenerate_type_stubs",
  ".spin/cmds.py:regenerate_clangtidy_files",
  ".spin/cmds.py:regenerate_github_workflows",
]
